public interface FriendlyAnimalInterface{
    public void Pet();
    public void Feed();
}